fix horizontal scroll

--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,10 +1,10 @@
 .footer {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   background-color: #222;
-  width: 100vw;
   padding: 100px 40px 0 40px;
   margin-top: 90px;
 }
@@ -32,9 +32,9 @@
   margin-top: 12px;
 }
 .footer-bottom {
+  width: 100%;
   color: #fff;
   margin-top: 90px;
-  width: 100vw;
   height: 75px;
   line-height: 75px;
   text-align: center;
