--- a/src/reset.css
+++ b/src/reset.css
@@ -108,5 +108,4 @@ body {
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
-  width: 100vw;
 }
